More work on chapter 7.

--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-eval-1}
 
-This chapter recounts the first of two stages of evaluation conducted with the Mirrorshades platform, tasked with establishing the worth of the parallel reality concept in comparison to previously explored alternate reality techniques. To this end the platform was deployed to a user study in which a reconstruction of a 15th century chapel and its present day counterpart were explored by participants both via a seated VR experience, as VR content has already come to be employed at cultural heritage sites, and via a parallel reality experience using Mirrorshades.
+This chapter recounts the first of two stages of evaluation conducted with the Mirrorshades platform, tasked with establishing the worth of the parallel reality concept in comparison to previously explored alternate reality techniques, as well as ascertaining the feasibility of the concept in general. To this end the platform was deployed to a user study in which a reconstruction of a 15th century chapel and its present day counterpart were explored by participants both via a seated VR experience, as VR content has already come to be employed at cultural heritage sites, and via a parallel reality experience using Mirrorshades.
 
 %=========================================================================================================
 
@@ -155,9 +155,9 @@ A total of 6 participants completed the stage 1 evaluation:
 	\item None had previously experienced the virtual chapel.
 \end{itemize}
 
-Due to the small sample size and its skewed age group the observations drawn from these results should be primarily considered in terms of initial evidence that justifies and informs more comprehensive future work. Combined with the fact that evaluation was weighted more toward assessing the feasibility of the parallel reality concept, and its worth compared to previous alternate reality applications within cultural heritage, than toward making detailed recommendations about specifics of implementations, these observations lead to the set of abstract, high level best practices for future parallel reality endeavours enumerated in section \ref{best-practices-for-parallel-reality}, rather than leading to strict and infallible claims as to the nature of the parallel reality concept and its implementation. However in reference to the age group it is interesting to consider the observation, noted in section \ref{virtual-heritage}, that younger visitors to cultural heritage sites often experience less arousal at sites where the former splendour is no longer visible, which may mean that they have more to gain from an application of parallel reality to cultural heritage than other age groups.
+Due to the small sample size and its skewed age group the observations drawn from these results should be primarily considered in terms of initial evidence that justifies and informs more comprehensive future work. Combined with the fact that evaluation was weighted more toward assessing the feasibility of the parallel reality concept and its worth compared to previous alternate reality applications within cultural heritage, than toward making detailed recommendations about specifics of implementations, these observations contribute to the set of abstract, high level best practices for future parallel reality endeavours enumerated in section \ref{best-practices-for-parallel-reality}, rather than leading to strict and infallible claims as to the nature of the parallel reality concept and its implementation. However in reference to the age group it is interesting to consider the observation, noted in section \ref{virtual-heritage}, that younger visitors to cultural heritage sites often experience less arousal at sites where the former splendour is no longer visible, which may mean that they have more to gain from an application of parallel reality to cultural heritage than other age groups.
 
-Original data are not reproduced within this thesis due to size constraints and the ethical agreement under which the evaluations were performed, however these data (including interview transcripts) can be made available by contacting the author.
+Original data are not reproduced within this thesis due to size constraints and the ethical agreement under which the evaluations were performed, however these data (including interview transcripts) can be made available by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
 
 %=========================================================================================================
 
@@ -667,7 +667,7 @@ A total of 7 participants completed the stage 2.1 evaluation:
 	\item None reported having previously experienced the virtual chapel.
 \end{itemize}
 
-As with the stage 1 evaluation, the small sample size and range of ages involved in the stage 2.1 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practices discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author.
+As with the stage 1 evaluation, the small sample size and range of ages involved in the stage 2.1 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practices discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
 
 %=========================================================================================================
 
@@ -1277,7 +1277,7 @@ As the controlled variable between the two parallel reality scenarios was based 
 	\item None reported having previously experienced the virtual chapel.
 \end{itemize}
 
-As with previous stages of the evaluation, the small sample size involved in the stage 2.2 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practices discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author.
+As with previous stages of the evaluation, the small sample size involved in the stage 2.2 evaluation means that the observations drawn from these results should be considered in the same manner: as initial evidence that informs the high level best practices discussed in section \ref{best-practices-for-parallel-reality} and which justifies and informs more comprehensive future work, rather than as detailed claims to specifics of implementations or concepts. Original data can again be obtained by contacting the author\footnote{\texttt{cj@cjdavies.org}}.
 
 %=========================================================================================================
 
@@ -1581,7 +1581,7 @@ SP was reduced in the 75/25 scenario to a level slightly lower than that in both
 
 INV was reduced in the 75/25 scenario and further reduced in the 50/50 scenario, as was to be expected. Interestingly however, the INV results for both parallel reality scenarios in stage 2.2 were notably higher than those for the parallel reality scenarios of stage 2.1, a discrepancy that is not contained within the higher INV for the traditional VR scenario in stage 2.2 compared to stage 2.1. When considering the difference between SP and INV for each scenario in stage 2.2, the further reduced INV value for the 50/50 scenario combined with its increased SP value indicates that in terms of the vacancy problem, the 50/50 scenario achieved a larger mitigation than the 75/25 scenario.
 
-REAL was reduced in the 75/25 scenario to almost exactly the same level as both parallel reality scenarios in stage 2.1, however for the 50/50 scenario REAL was only reduced a miniscule amount (a reduction of 0.118 from 2.563 to 2.438). This implies that the increased visibility of the VR environment when perceiving the RW environment helped to enhance the perceived realness of the VR environment, possibly by mitigating the somewhat rudimentary visual quality of the virtual model by making complimentary and supporting aspects of the RW environment more prominent.
+REAL was reduced in the 75/25 scenario to almost exactly the same level as both parallel reality scenarios in stage 2.1, however for the 50/50 scenario REAL was only reduced a miniscule amount (a reduction of 0.118 from 2.563 to 2.438). This implies that the increased visibility of the VR environment when perceiving the RW environment helped to enhance the perceived realness of the VR environment, possibly by mitigating the somewhat rudimentary visual quality of the virtual model by making complimentary and supporting aspects of the RW environment more prominent, masking deficiencies in the VR environment by compensating for them with their RW counterparts.
 
 When considering SP3 and INV2 in isolation, the mean SP3 for the seated VR scenario is confusingly low at 1.75 (table \ref{sp3-inv2-2-2-table}). This is especially odd considering the relatively high mean for the overall SP subscale in the seated VR scenario of 4.3 (table \ref{sp-2-2-table}). It is also completely out of line with the mean SP3 for the seated VR scenario from stage 2.1 of 4.5 (table \ref{sp-2-1-table}), which was in keeping with the overall SP mean of 4.6 (table \ref{sp3-inv2-2-1-table}) for the traditional VR scenario in stage 2.1. This oddity could be explained by possible confusion among the stage 2.2 participants the first time they completed the questionnaire over the wording of SP3, which presents a negative - \textit{``I did \textbf{not} feel present in the virtual space''} (emphasis added), anchored between \textit{``did not feel''} and \textit{``felt present''}.
 
