--- a/03_background/background.tex
+++ b/03_background/background.tex
@@ -574,7 +574,7 @@ In this model, the notion of involvement relates closely to the focus of attenti
 
 \subsection{The Combined Milgram/Waterworth Model}
 \label{combined-milgram-waterworth-model}
-With the locus of attention axis representing the environment from which the stimuli the user is perceiving originate from, a relationship can be drawn between the Waterworth model and Milgram and Kishino's reality-virtuality continuum, with the latter considered here to be analogous to the locus of attention axis. The combination of these two models in this manner gives rise to the combined Milgram/Waterworth model which is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum} and allows for a novel method of visualising the experience of using alternate reality systems, including those that implement parallel reality.
+With the locus of attention axis representing the environment from which the stimuli the user is perceiving originate from, a relationship can be drawn between the Waterworth model and Milgram and Kishino's reality-virtuality continuum, with the latter considered here to be analogous to the locus of attention axis. The combination of these two models in this manner gives rise to the combined Milgram/Waterworth model which is shown by figure \ref{focus-locus-sensus-with-virtuality-continuum} and allows for a novel method of visualising the experience of using alternate reality systems, including those that implement parallel reality. This combination of models allows for a single visualisation of an alternate reality experience that takes into account both the more objective assessment of the provenance of the stimuli that the user is perceiving and the more subjective assessments of their experience in terms of conceptual versus perceptual processing and their level of conscious arousal.
 
 \begin{figure}[h]
 	\begin{center}
